# django-phone-auth

./: .gitignore  docker-compose.yml  readme.md
backend/: .env  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/authapp/: admin.py  models.py  serializer.py  urls.py  views.py
backend/authapp/migrations/: 0001_initial.py  0002_authtempcode_created_at_authtempcode_retry_attempts.py  0003_alter_authtempcode_options_alter_user_options_and_more.py  0004_alter_authtempcode_temp_code.py
backend/authapp/services/login/: exceptions.py  service.py
backend/authapp/services/referral/: exceptions.py  service.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
